[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "align"
version = "0.1.0"
description = "Needleman-Wunsch global pairwise sequence alignment"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pytest",
]

[project.optional-dependencies]
dev = ["pytest"]
